# calculator

./: .gitignore  Main.hs  README.md  hello-gtk.cabal
.github/workflows/: release.yml
Calculator.app/Contents/: Info.plist
scripts/: create-bundle.sh
