name:                hello-gtk
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              You
maintainer:          you@example.com
build-type:          Simple
cabal-version:       >=1.10

executable hello-gtk
  main-is:           Main.hs
  build-depends:     base >=4.16 && <5
                    , haskell-gi
                    , haskell-gi-base
                    , gi-gtk3
                    , text
  default-language:  Haskell2010
  ghc-options:       -threaded
