name:                hello-gtk
version:             0.1.2.0
license:             MIT
license-file:        LICENSE
author:              Niladri Das
maintainer:          bniladridas@users.noreply.github.com
build-type:         Simple
cabal-version:      2.0

executable hello-gtk
  main-is:           Main.hs
  autogen-modules:   Paths_hello_gtk
  other-modules:     Paths_hello_gtk
  build-depends:     base >=4.16 && <5
                    , directory
                    , haskell-gi
                    , haskell-gi-base
                    , filepath
                    , gi-gdk4
                    , gi-gtk4
                    , gi-gio
                    , text
  default-language:  Haskell2010
  ghc-options:       -threaded
